# CLUEstering_alpaka3

./: .gitignore  CMakeLists.txt  README.md
CLUEstering/: CLUEstering.py  __init__.py
CLUEstering/BindingModules/: CMakeLists.txt  Run.hpp
CLUEstering/BindingModules/cuda/: CMakeLists.txt  binding_gpu_cuda.cpp
CLUEstering/BindingModules/hip/: CMakeLists.txt  binding_gpu_hip.cpp
CLUEstering/BindingModules/openmp/: CMakeLists.txt  binding_cpu_omp.cpp
CLUEstering/BindingModules/serial/: CMakeLists.txt  binding_cpu.cpp
CLUEstering/BindingModules/tbb/: CMakeLists.txt  binding_cpu_tbb.cpp
benchmark/dataset_size/: CMakeLists.txt  main.cpp
benchmark/dataset_size/cpu/: CMakeLists.txt
benchmark/dataset_size/cuda/: CMakeLists.txt
benchmark/microbenchmarking/associator/: CMakeLists.txt
benchmark/microbenchmarking/associator/cuda/: CMakeLists.txt
benchmark/profiling/: CMakeLists.txt  main.cpp
benchmark/profiling/sycl/: CMakeLists.txt
benchmark/utils/: generation.hpp
cmake/: AddAlpakaExecutors.cmake  TestSetup.cmake  clue_finalize.cmake
docs/source/: getting-started.rst
examples/: CMakeLists.txt  basic.py  main.cpp
examples/basic/: CMakeLists.txt  main.cpp
examples/cuda_native/: CMakeLists.txt  main.cu
examples/hip_native/: CMakeLists.txt  main.cpp
include/CLUEstering/: CLUEstering.hpp
include/CLUEstering/core/: Clusterer.hpp  ConvolutionalKernel.hpp  DistanceMetrics.hpp
include/CLUEstering/core/detail/: Clusterer.hpp  ClusteringKernels.hpp  ComputeTiles.hpp  ConvolutionalKernel.hpp  SetupFollowers.hpp  SetupSeeds.hpp  SetupTiles.hpp
include/CLUEstering/data_structures/: AssociationMap.hpp  AssociationMapView.hpp  ClusterProperties.hpp  PointsConversion.hpp  PointsDevice.hpp  PointsHost.hpp
include/CLUEstering/data_structures/detail/: AssociationMap.hpp  AssociationMapBase.hpp  PointsConversion.hpp  PointsDevice.hpp  PointsHost.hpp
include/CLUEstering/data_structures/internal/: Followers.hpp  MakeAssociator.hpp  PointsCommon.hpp  SeedArray.hpp  Tiles.hpp  TilesView.hpp  VecArray.hpp
include/CLUEstering/detail/: Dim.hpp  concepts.hpp
include/CLUEstering/internal/algorithm/backend/: AlgoDispatchTag.hpp  AlgorithmDispatch.hpp  backendImp.hpp  host.hpp  oneApi.hpp  unifiedCudaHip.hpp
include/CLUEstering/internal/algorithm/count_if/: count_if.hpp
include/CLUEstering/internal/algorithm/extrema/: extrema.hpp
include/CLUEstering/internal/algorithm/reduce/: reduce.hpp
include/CLUEstering/internal/algorithm/scan/: scan.hpp
include/CLUEstering/internal/algorithm/sort/: sort.hpp
include/CLUEstering/internal/alpaka/: config.hpp  devices.hpp  func.hpp  memory.hpp  minMax.hpp  traits.hpp  work_division.hpp
include/CLUEstering/internal/alpaka/caching_allocator/: allocator_policy.hpp  cached_buf_alloc.hpp  caching_allocator.hpp  get_device_caching_allocator.hpp  get_host_caching_allocator.hpp
include/CLUEstering/internal/meta/: accumulate.hpp  apply.hpp  maximum.hpp
include/CLUEstering/utils/: cluster_centroid.hpp  get_clusters.hpp  get_queue.hpp  read_csv.hpp  scores.hpp
include/CLUEstering/utils/detail/: cluster_centroid.hpp  get_cluster_properties.hpp  get_clusters.hpp  read_csv.hpp  scores.hpp
tests/: CMakeLists.txt  conftest.py  simpleAlpakaReduceTest.cpp  test_aniso_dataset.py  test_association_map.cpp  test_blob_dataset.py  test_cluster_centroid.cpp  test_cluster_centroid.py  test_clusterer.cpp  test_clusterer.py  test_clusterer_equality.py  test_clusterer_import.py  test_clustering.cpp  test_device_points.cpp  test_host_points.cpp  test_input_datatypes.py  test_moons_dataset.py  test_partial_dimensional_clustering.py  test_plotters.py  test_reduceMinMax.cpp  test_sissa_dataset.py  test_test_blobs.py  test_toydetector_dataset.py  test_utilities.cpp  test_validation_scores.cpp  test_wrapped_coordinates.py
tests/cpu/: CMakeLists.txt
tests/cuda/: CMakeLists.txt
tests/hip/: CMakeLists.txt
tests/sycl/: CMakeLists.txt
